--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">Sobre Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Proyectos destacados</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Proyectos destacados</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                     </ul>
                 </div>
@@ -83,7 +83,7 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="services">
+        <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Que ofrecemos</h2>
@@ -175,7 +175,7 @@
             </div>
         </section>
         <!-- About-->
-        <section class="page-section" id="portfolio">
+        <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Proyectos destacados</h2>
