--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a> -->
+                <a href="#page-top"><img src="assets/img/hidramec_recortado.jpg" width="200px" height="100px" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -38,9 +38,11 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">Hidramec</div>
-                <div class="masthead-subheading">Servicios Hidraulicos</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Cuentame más</a>
+                <br><br><br><br>
+                <!-- <div class="masthead-heading text-uppercase"><img src="assets/img/hidramec_png.png" alt="..." /></div> -->
+                <div class="masthead-subheading" id="idPortada">SERVICIOS HIDRÁULICOS</div>
+                <br><br><br>
+                <a class="btn btn-info btn-xl text-uppercase" href="#services">Cuentame más</a>
             </div>
         </header>
         <!-- Services-->
@@ -48,7 +50,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Sobre Nosotros</h2>
-                    <p class="section-subheading text-muted">
+                    <p class="section-subheading text-muted" id="parrafo">
                         Estimados, Por medio de la presente, nos complace presentarles Hidráulica Hidramec Ltda., una empresa con más de diez años de experiencia 
                         en servicios técnicos especializados en el diseño, reparación y mantenimiento de equipamiento industrial y portuario. Nuestra propuesta de 
                         valor se basa en soluciones técnicas integrales, confiables y eficientes, ahora también ofrecidas a través de nuestro taller móvil equipado 
@@ -57,24 +59,27 @@
                 </div>
                 <br><br>
                 <div class="row text-center">
-                    <div class="col-md-6">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Nuestra Visión</h4>
-                        <p class="text-muted">
+                    <div class="col-md-12">
+                        <img src="assets/img/vision_2.jpg" width="100%" alt="..." />
+                        <!-- <span class="fa-stack fa-4x"> -->
+                            <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
+                            <!-- <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i> -->
+                        <!-- </span> -->
+                        <h2 class="my-3">NUESTRA VISIÓN</h2>
+                        <p class="text-muted" id="parrafo">
                             Posicionarnos como la empresa líder en servicios de mantenimiento industrial y portuario en la región, ofreciendo 
                             soluciones técnicas avanzadas que contribuyan al desarrollo productivo de nuestros clientes.
                         </p>
                     </div>
-                    <div class="col-md-6">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Nuestra Misión</h4>
-                        <p class="text-muted">
+                    <br> <br>
+                    <div class="col-md-12">
+                        <img src="assets/img/mision.jpg" width="100%" alt="..." />
+                        <!-- <span class="fa-stack fa-4x"> -->
+                            <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
+                            <!-- <i class="fas fa-laptop fa-stack-1x fa-inverse"></i> -->
+                        <!-- </span> -->
+                        <h2 class="my-3">NUESTRA MISIÓN</h2>
+                        <p class="text-muted" id="parrafo">
                             Atender las necesidades de nuestros clientes con un servicio confiable, seguro y eficiente, utilizando productos de 
                             alta calidad y aplicando estándares internacionales de seguridad.    
                         </p>
@@ -97,7 +102,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/Manutención y reparación.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
@@ -118,7 +123,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/Fabricación de flexible.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
@@ -138,7 +143,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/Venta de repuestos y herramientas.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
@@ -158,7 +163,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/Diseño, reparación.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
@@ -167,6 +172,27 @@
                                 <div class="portfolio-caption-subheading text-muted">
                                     - Soldadores certificados en procesos TIG, MIG y arco manual <br>
                                     - Diseño y fabricación a medida
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="col-lg-3 col-sm-3 mb-3"></div>
+                    <div class="col-lg-6 col-sm-6 mb-6">
+                        <!-- Portfolio item 2-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/Lavado industrial.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">
+                                    Lavado Industrial
+                                </div>
+                                <div class="portfolio-caption-subheading text-muted">
+                                    - Servicio especializado en la limpieza profunda de maquinaria pesada y equipos portuarios, eliminando residuos de grasa, aceite y suciedad para maximizar su rendimiento y prolongar su vida útil.
                                 </div>
                             </div>
                         </div>
@@ -183,7 +209,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/proyectos_1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -198,7 +224,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/contenedor.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -213,7 +239,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/mantenimiento de gruas.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -228,7 +254,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portacontenedor.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -266,7 +292,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">maulen.mec@gmail.com</a></div>
+                                <div class="small text-black-50"><a href="#!">contacto.hidramec@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -332,6 +358,7 @@
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
@@ -343,7 +370,7 @@
                                             Illustration
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                    <button class="btn btn-info btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Close Project
                                     </button>
