--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
             <div class="container">
-                <a href="#page-top"><img src="assets/img/hidramec_recortado.jpg" width="200px" height="100px" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/hidramec_recortado.jpg" alt="..." /></a> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -95,7 +96,7 @@
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-sm-6 mb-6x">
+                    <div class="col-lg-5 col-sm-5">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
@@ -116,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-6 mb-6">
+                    <div class="col-lg-6 col-sm-6">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
@@ -136,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-6 mb-6 mb-lg-0">
+                    <div class="col-lg-5 col-sm-5">
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
@@ -156,7 +157,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-6 mb-6 mb-sm-0">
+                    <div class="col-lg-1 col-sm-1"></div>
+                    <div class="col-lg-5 col-sm-5">
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
@@ -357,7 +359,6 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
