--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
-                <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/hidramec_recortado.jpg" alt="..." /></a> -->
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/hidramec_recortado.jpg" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -39,10 +38,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <br><br><br><br>
-                <!-- <div class="masthead-heading text-uppercase"><img src="assets/img/hidramec_png.png" alt="..." /></div> -->
+                <!-- <div class="masthead-heading text-uppercase">Hidramec</div> -->
+                <!-- <div class="masthead-subheading">Servicios Hidraulicos</div> -->
                 <div class="masthead-subheading" id="idPortada">SERVICIOS HIDRÁULICOS</div>
-                <br><br><br>
                 <a class="btn btn-info btn-xl text-uppercase" href="#services">Cuentame más</a>
             </div>
         </header>
@@ -96,7 +94,7 @@
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-5 col-sm-5">
+                    <div class="col-lg-6 col-sm-6 mb-6x">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
@@ -117,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 mb-6">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
@@ -137,7 +135,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-sm-5">
+                    <div class="col-lg-6 col-sm-6 mb-6 mb-lg-0">
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
@@ -157,8 +155,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-1 col-sm-1"></div>
-                    <div class="col-lg-5 col-sm-5">
+                    <div class="col-lg-6 col-sm-6 mb-6 mb-sm-0">
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
@@ -178,7 +175,6 @@
                             </div>
                         </div>
                     </div>
-                    <br>
                     <div class="col-lg-3 col-sm-3 mb-3"></div>
                     <div class="col-lg-6 col-sm-6 mb-6">
                         <!-- Portfolio item 2-->
@@ -211,7 +207,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/proyectos_1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/proyectos_1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -226,7 +222,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/contenedor.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/contenedor.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -241,7 +237,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/mantenimiento de gruas.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/mantenimiento de gruas.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -256,7 +252,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portacontenedor.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/portacontenedor.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -333,16 +329,13 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
+                    <div class="col-lg-3 my-3 my-lg-0"></div>
+                    <div class="col-lg-3 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                    <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-                    </div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Hidráulica Hidramec Ltda.</div>
                 </div>
             </div>
         </footer>
@@ -371,7 +364,7 @@
                                             Illustration
                                         </li>
                                     </ul>
-                                    <button class="btn btn-info btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Close Project
                                     </button>
