--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/Venta de repuestos y herramientas.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/venta_repuestos.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
@@ -162,7 +162,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/Diseño, reparación.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/diseno_reparacion.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
@@ -183,7 +183,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/Lavado industrial.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/lavado_industrial.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
