--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <br><br>
                 <div class="row text-center">
                     <div class="col-md-12">
-                        <img src="assets/img/vision_2.jpg" width="100%" alt="..." />
+                        <img src="assets/img/head/nosotros.jpeg" width="100%" alt="..." />
                         <!-- <span class="fa-stack fa-4x"> -->
                             <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
                             <!-- <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i> -->
@@ -72,7 +72,7 @@
                     </div>
                     <br> <br>
                     <div class="col-md-12">
-                        <img src="assets/img/mision.jpg" width="100%" alt="..." />
+                        <img src="assets/img/head/mision.jpg" width="100%" alt="..." />
                         <!-- <span class="fa-stack fa-4x"> -->
                             <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
                             <!-- <i class="fas fa-laptop fa-stack-1x fa-inverse"></i> -->
@@ -97,12 +97,7 @@
                     <div class="col-lg-6 col-sm-6 mb-6x">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/Manutención y reparación.jpg" alt="..." />
-                            </a>
+                            <a><img class="img-fluid" src="assets/img/ofrecemos/mantenimiento_reparacion_maquinaria.jpg" alt="..." /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
                                     MANTENIMIENTO Y REPARACIÓN DE MAQUINARIA PESADA
@@ -115,15 +110,25 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6 col-sm-6 mb-6 mb-sm-0">
+                        <!-- Portfolio item 5-->
+                        <div class="portfolio-item">
+                            <a><img class="img-fluid" src="assets/img/ofrecemos/diseno_estructuras_metalicas.jpg" alt="..." /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">
+                                    DISEÑO, REPARACIÓN Y MANTENIMIENTO DE ESTRUCTURAS METÁLICAS
+                                </div>
+                                <div class="portfolio-caption-subheading text-muted">
+                                    - Soldadores certificados en procesos TIG, MIG y arco manual <br>
+                                    - Diseño y fabricación a medida
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-6 col-sm-6 mb-6">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/Fabricación de flexible.jpg" alt="..." />
-                            </a>
+                            <a><img class="img-fluid" src="assets/img/ofrecemos/fabricacion_flexibles_hidraulicos.jpg" alt="..." /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
                                     FABRICACIÓN DE FLEXIBLES HIDRÁULICOS
@@ -138,12 +143,7 @@
                     <div class="col-lg-6 col-sm-6 mb-6 mb-lg-0">
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/venta_repuestos.jpg" alt="..." />
-                            </a>
+                            <a><img class="img-fluid" src="assets/img/ofrecemos/venta_repuestos_industriales.jpg" alt="..." /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
                                     VENTA DE REPUESTOS Y HERRAMIENTAS INDUSTRIALES
@@ -155,42 +155,30 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-6 mb-6 mb-sm-0">
-                        <!-- Portfolio item 5-->
+                    <div class="col-lg-6 col-sm-6 mb-6">
+                        <!-- Portfolio item 2-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/diseno_reparacion.jpg" alt="..." />
-                            </a>
+                            <a><img class="img-fluid" src="assets/img/ofrecemos/lavado_industrial.jpg" alt="..." /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
-                                    DISEÑO, REPARACIÓN Y MANTENIMIENTO DE ESTRUCTURAS METÁLICAS
+                                    LAVADO INDUSTRIAL
                                 </div>
                                 <div class="portfolio-caption-subheading text-muted">
-                                    - Soldadores certificados en procesos TIG, MIG y arco manual <br>
-                                    - Diseño y fabricación a medida
+                                    - Servicio especializado en la limpieza profunda de maquinaria pesada y equipos portuarios, eliminando residuos de grasa, aceite y suciedad para maximizar su rendimiento y prolongar su vida útil.
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-3 mb-3"></div>
+
                     <div class="col-lg-6 col-sm-6 mb-6">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/lavado_industrial.jpg" alt="..." />
-                            </a>
+                            <a><img class="img-fluid" src="assets/img/ofrecemos/ensayos_tintas.jpg" alt="..." /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">
-                                    Lavado Industrial
+                                    ENSAYOS NO DESTRUCTIVOS CON TINTAS PENETRANTES
                                 </div>
                                 <div class="portfolio-caption-subheading text-muted">
-                                    - Servicio especializado en la limpieza profunda de maquinaria pesada y equipos portuarios, eliminando residuos de grasa, aceite y suciedad para maximizar su rendimiento y prolongar su vida útil.
                                 </div>
                             </div>
                         </div>
@@ -222,7 +210,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/contenedor.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/puesta_marcha_fabrica_maersk.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
@@ -237,7 +225,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/mantenimiento de gruas.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/grua_sts.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">
